--- a/Tech/Shopper/app/build.gradle
+++ b/Tech/Shopper/app/build.gradle
@@ -7,8 +7,9 @@ android {
 
     defaultConfig {
         applicationId "com.example.crosssellers"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
@@ -19,6 +20,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    sourceSets {
+        main {
+            java {
+                srcDirs 'src/main/java', 'src/main/java/com.example.crosssellers/Models'
+            }
         }
     }
 
@@ -32,13 +40,23 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    // Multi-dex Bug
+    implementation 'com.android.support:multidex:1.0.3'
+
     // Google sign-in library
     implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
+    // Bottom menu navigation
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
 
+    // Picasso: Image
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
 }
