--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.crosssellers">
-    <!-- Permission: Internet -->
+
+    <!--
+    //==================================================================//
+    //
+    // This app requires the use of these permission(s)
+    //
+    //==================================================================//
+    -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,14 +20,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".DashboardActivity">
+
+
+        <!--
+        //==================================================================//
+        //
+        // Starting Activity (Splash Screen)
+        //
+        //==================================================================//
+        -->
+        <activity android:name=".SplashScreen" android:theme="@style/Theme.AppCompat.NoActionBar">
+            <!--
+            //==================================================================================//
+            // This code below will make this activity be the 1st activity to show in the app
+            //==================================================================================//
+            -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--
+        //==================================================================//
+        //
+        // Other Activity(s)
+        //
+        //==================================================================//
+        -->
+        <activity android:name=".SelectMallActivity" ></activity>
+        <activity android:name=".ChatActivity" android:theme="@style/AppThemeNo" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".DashboardActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
     </application>
