--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CPlatformViewActivity"></activity>
         <!--
         //==================================================================//
         //
@@ -60,10 +61,11 @@
         <activity
             android:name=".RegisterActivity"
             android:parentActivityName=".SelectMallActivity" />
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:parentActivityName=".SelectMallActivity" />
         <activity
-            android:name=".CollaborationPlatformActivity"
+            android:name=".CPlatformHomeActivity"
             android:parentActivityName=".DashboardActivity" />
         <activity
             android:name=".PromotionActivity"
@@ -71,9 +73,8 @@
         <activity
             android:name=".MallInsightActivity"
             android:parentActivityName=".DashboardActivity" />
-
-
         <activity android:name=".SetupProfileActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -82,7 +83,9 @@
             </intent-filter>
             -->
         </activity>
-
+        <activity
+            android:name=".CPlatformCreateActivity"
+            android:parentActivityName=".CPlatformHomeActivity" />
         <activity
             android:name=".ShopInsightActivity"
             android:parentActivityName=".DashboardActivity">
