CPlatform almost done

--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,7 +19,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CPlatformViewActivity"></activity>
         <!--
         //==================================================================//
         //
@@ -73,6 +72,10 @@
         <activity
             android:name=".MallInsightActivity"
             android:parentActivityName=".DashboardActivity" />
+
+
+        <activity android:name=".CPlatformViewActivity"
+            android:parentActivityName=".CPlatformHomeActivity" />
         <activity android:name=".SetupProfileActivity">
 
             <!--
