--- a/Tech/Shopper/app/build.gradle
+++ b/Tech/Shopper/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.2' // Get rid of default_web_client_id compile error
 
     // Image Slider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.0.6'
