More Update on Promotion

--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CPromotionCreateActivity"></activity>
+        <activity android:name=".CPromotionViewActivity" />
+        <activity android:name=".CPromotionHomeActivity" />
         <!--
         //==================================================================//
         //
@@ -72,9 +75,8 @@
         <activity
             android:name=".MallInsightActivity"
             android:parentActivityName=".DashboardActivity" />
-
-
-        <activity android:name=".CPlatformViewActivity"
+        <activity
+            android:name=".CPlatformViewActivity"
             android:parentActivityName=".CPlatformHomeActivity" />
         <activity android:name=".SetupProfileActivity">
 
