--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CPromotionCreateActivity"></activity>
+        <activity android:name=".ShopInsightActivity_Product"></activity>
+        <activity android:name=".ShopInsightActivity_Customer" />
+        <activity android:name=".ShopInsightActivity_Home" />
+        <activity android:name=".CPromotionCreateActivity" />
         <activity android:name=".CPromotionViewActivity" />
         <activity android:name=".CPromotionHomeActivity" />
         <!--
@@ -92,7 +95,7 @@
             android:name=".CPlatformCreateActivity"
             android:parentActivityName=".CPlatformHomeActivity" />
         <activity
-            android:name=".ShopInsightActivity"
+            android:name=".ShopInsightActivity_Sales"
             android:parentActivityName=".DashboardActivity">
 
             <!--
