--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShopInsightActivity_Product"></activity>
+        <activity android:name=".ProfileActivity_CPlatformView"></activity>
+        <activity android:name=".ShopInsightActivity_Product" />
         <activity android:name=".ShopInsightActivity_Customer" />
         <activity android:name=".ShopInsightActivity_Home" />
         <activity android:name=".CPromotionCreateActivity" />
