--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileActivity_CPlatformView"></activity>
+        <activity android:name=".EditPromoPostActivity"></activity>
+        <activity android:name=".EditCPlatformPostActivity" />
+        <activity android:name=".ProfileActivity_CPromotionView" />
+        <activity android:name=".ProfileActivity_CPlatformView" />
         <activity android:name=".ShopInsightActivity_Product" />
         <activity android:name=".ShopInsightActivity_Customer" />
         <activity android:name=".ShopInsightActivity_Home" />
