--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditPromoPostActivity"></activity>
+        <activity android:name=".MallInsightActivity_Tenant"></activity>
+        <activity android:name=".MallInsightActivity_Competitor" />
+        <activity android:name=".MallInsightActivity_Floorfall" />
+        <activity android:name=".EditPromoPostActivity" />
         <activity android:name=".EditCPlatformPostActivity" />
         <activity android:name=".ProfileActivity_CPromotionView" />
         <activity android:name=".ProfileActivity_CPlatformView" />
@@ -80,7 +83,7 @@
             android:name=".PromotionActivity"
             android:parentActivityName=".DashboardActivity" />
         <activity
-            android:name=".MallInsightActivity"
+            android:name=".MallInsightActivity_Home"
             android:parentActivityName=".DashboardActivity" />
         <activity
             android:name=".CPlatformViewActivity"
