--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
             android:parentActivityName=".CPlatformHomeActivity" />
         <activity
             android:name=".ShopInsightActivity_Sales"
-            android:parentActivityName=".DashboardActivity">
+            android:parentActivityName=".ShopInsightActivity_Home">
 
             <!--
             <intent-filter>
