--- a/Tech/Shopper/app/src/main/AndroidManifest.xml
+++ b/Tech/Shopper/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_logogo_red"
+        android:icon="@drawable/finallogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_logogo_red"
+        android:roundIcon="@drawable/finallogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".EditProfileActivity"></activity>
